--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "dom-inator_009",
+  "name": "project-js",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/dom-inator_009/",
+    "build": "vite build --base=/project-js/",
     "preview": "vite preview"
   },
   "devDependencies": {
